class model and builder generator fixes